# poetry2nix-issue

./: README.md  flake.nix  pyproject.toml  test.py
